Minor bug fixing (overlayed gallery & filter overlapping)

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,11 @@ p{
 	display: none;
 }
 .images.expanded .media-section--cover p{
-	margin: 5px 0 0;
+	margin: 0;
+}
+.images.expanded .media-section--cover .container{
+	vertical-align: top;
+	margin-top: 20px;
 }
 .media-section--cover .container{
 	display: inline-block;
@@ -1040,11 +1044,13 @@ footer a + a{
 	background: url('../assets/radioselected.png') no-repeat top left;
 }
 .image-categories-list input[type="radio"]{
-	display: inline-block;
+	display: none;
 	vertical-align: middle;
 	width: 0;
 	height: 30px;
 	opacity: 0;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 sup{
